<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectui.TimerCleaningActivity">

    <RelativeLayout
        android:id="@+id/timer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/minutes_cos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minutes_plus">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="245dp"
            android:layout_height="102dp"
            android:contentDescription="@string/desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            app:srcCompat="@drawable/table_1" />

        <EditText
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/imageView"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            android:backgroundTint="@color/grey"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/sec"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/text_style"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_alignStart="@id/imageView"
            android:layout_centerVertical="true"
            android:layout_marginStart="21dp"
            android:backgroundTint="@color/grey"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/min"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/text_style"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:id="@+id/cooking_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Timer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/minutes_plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/time_adj_button"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cooking_timer" />

    <Button
        android:id="@+id/seconds_cos10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/time_adj_button"
        android:text="@string/cos_10"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_layout" />

    <Button
        android:id="@+id/seconds_plus10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/time_adj_button"
        android:text="@string/plus_10"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cooking_timer" />

    <Button
        android:id="@+id/minutes_cos"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/time_adj_button"
        android:text="@string/cos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_layout" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/next_back"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/next_back"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timer_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        app:srcCompat="@drawable/digital_clock" />

</androidx.constraintlayout.widget.ConstraintLayout>