<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/start_button"
        android:textAllCaps="false"
        android:text="@string/menu_add"
        android:backgroundTint="@color/peach_orange"
        android:drawableEnd="@drawable/baseline_add_white_18dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:drawablePadding="2dip"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/start_button"
        android:textAllCaps="false"
        android:text="Τροποποίηση"
        android:drawableEnd="@drawable/baseline_create_white_18dp"
        android:backgroundTint="@color/peach_orange"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:drawablePadding="2dip"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_button"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_button"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menus_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/add_button"
            app:layout_constraintBottom_toTopOf="@id/start_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>