<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectui.ManualCookingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cooking_timer">

        <ImageView
            android:id="@+id/minutes_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/timer" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/minutes_plus"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/time_adj_button"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/minutes"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="2dp"
                        android:text="Min"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/grey"
                        android:inputType="number"
                        android:maxLength="2"
                        android:text="@string/min"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/text_style"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <Button
                    android:id="@+id/minutes_cos"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/time_adj_button"
                    android:text="@string/cos"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="6dp"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/seconds_plus10"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/time_adj_button"
                    android:text="@string/plus_10"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignTop="@id/seconds"
                        android:text="Sec"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/grey"
                        android:inputType="number"
                        android:maxLength="2"
                        android:text="@string/sec"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/text_style"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <Button
                    android:id="@+id/seconds_cos10"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/time_adj_button"
                    android:text="@string/cos_10"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/cooking_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="Συνολικός\nΧρόνος Λειτουργίας"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_horizontally" />


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_button"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mixgrill_text"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="Χρόνος λειτουργίας Grill"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/grill_seekbar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/grill_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/limit_horizontally"
        app:layout_constraintStart_toEndOf="@+id/grill_seekbar"
        app:layout_constraintTop_toBottomOf="@id/mixgrill_text"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/grill_minutes_text"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="13dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:text=":"
            android:textColor="@color/grey"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

        <TextView
            android:id="@+id/grill_seconds_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/start_button"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/help"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/help"
        android:text="@string/help"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/limit_horizontally"
        app:layout_constraintEnd_toStartOf="@+id/grill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/grill"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Switch
        android:id="@+id/switch_grill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="4dp"
        android:text="@string/on"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:thumb="@drawable/custom_thumb"
        android:track="@drawable/custom_track"
        app:layout_constraintBottom_toTopOf="@+id/limit_horizontally"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grill"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/grill_seekbar"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/custom_seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/custom_seekbar_thumb"
        app:layout_constraintBottom_toTopOf="@+id/limit_horizontally"
        app:layout_constraintStart_toEndOf="@+id/switch_grill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/grill_percent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/grill_seekbar"
        app:layout_constraintStart_toEndOf="@+id/grill" />

    <View
        android:id="@+id/limit_horizontally"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/power_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:text="Επίπεδο Έντασης"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/limit_horizontally" />

    <RelativeLayout
        android:id="@+id/knob_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_text">

        <ImageView
            android:id="@+id/knob_values"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="Knob values"
            android:foregroundGravity="center"
            android:src="@drawable/values"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="160dp" />

        <com.example.projectui.RotaryKnobView
            android:id="@+id/knob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/knob_values"
            android:layout_alignTop="@id/knob_values"
            android:layout_alignEnd="@id/knob_values"
            android:layout_alignBottom="@id/knob_values"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            app:initialValue="0"
            app:knobDrawable="@drawable/ic_rotary_knob"
            app:maxValue="10"
            app:minValue="1" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>